--- a/style.css
+++ b/style.css
@@ -1,217 +1,1 @@
-body {
-  margin: 0 auto;
-  box-sizing: border-box;
-  background-color: rgb(0, 0, 0);
-}
-
-.navigacija {
-  display: flex;
-  flex-direction: row;
-  justify-content: left;
-  list-style-type: none;
-}
-.item {
-  background-color: rgb(42, 136, 165);
-  padding: 1rem;
-  color: #ffffff;
-  font-size: 12pt;
-  font-weight: 600;
-  border: 2px solid white;
-}
-
-.item:hover {
-  background-color: azure;
-  color: blue;
-}
-a {
-  color: inherit;
-  text-decoration: none;
-}
-.hero {
-  height: 60vh;
-  width: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-}
-
-h1 {
-  color: #ffffff;
-  text-align: center;
-}
-
-h3 {
-  text-align: center;
-  background-color: black;
-  animation-name: example;
-  animation-duration: 3s;
-  animation-iteration-count: 10;
-  padding: 0.7rem;
-  font-size: 16pt;
-}
-.vasari {
-  display: flex;
-  padding: 2rem;
-  justify-content: center;
-  justify-content: space-around;
-}
-.vasar {
-  color: aliceblue;
-  text-align: center;
-  box-shadow: 10px 10px 5px 0px rgba(255, 255, 255, 0.35);
-}
-img {
-  width: 500px;
-  height: 300px;
-}
-footer {
-  background-color: #ffffff;
-  text-align: center;
-  padding: 0.5rem;
-}
-.ponuda {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin: auto;
-  background-color: rgb(69, 117, 160);
-  color: #ffffff;
-  opacity: 0.8;
-  border-radius: 5px;
-  padding: 30px;
-  text-align: center;
-  margin-bottom: 1rem;
-}
-ul {
-  list-style-type: none;
-  font-size: 15pt;
-}
-.putovanja {
-  display: flex;
-  padding: 2rem;
-  justify-content: center;
-  justify-content: space-around;
-}
-.put {
-  color: aliceblue;
-  text-align: center;
-  box-shadow: 10px 10px 5px 0px rgba(255, 255, 255, 0.35);
-}
-.slike {
-  width: 350px;
-}
-.naziv {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding: 5px;
-}
-.forma {
-  display: flex;
-  flex-direction: column;
-  color: #ffffff;
-  margin: auto;
-  padding: 3rem;
-  width: 500px;
-  background-color: rgb(32, 68, 100);
-  border-radius: 5px;
-}
-label {
-  font-size: 15pt;
-  padding: 1rem;
-}
-input {
-  padding: 0.5rem;
-  border-radius: 5px;
-}
-button {
-  margin-top: 2rem;
-  padding: 0.5rem;
-  border-radius: 5px;
-  color: blue;
-}
-@keyframes example {
-  from {
-    background-color: rgb(0, 0, 0);
-    color: #ffffff;
-  }
-  to {
-    background-color: rgb(0, 0, 0);
-    color: rgb(43, 86, 171);
-  }
-}
-
-@media screen and (max-width: 990px) {
-  .navigacija {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    list-style-type: none;
-  }
-  .item {
-    background-color: rgb(42, 136, 165);
-    padding: 1rem;
-    color: #ffffff;
-    font-size: 12pt;
-    font-weight: 600;
-    border: 2px solid white;
-    width: 60%;
-  }
-  .vasari {
-    display: flex;
-    flex-direction: column;
-    padding: 2rem;
-    justify-content: center;
-    justify-content: space-around;
-  }
-  .vasar {
-    color: aliceblue;
-    text-align: center;
-    box-shadow: none;
-  }
-  img {
-    width: 200px;
-    height: 300px;
-  }
-  .ponuda {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin: auto;
-    background-color: rgb(69, 117, 160);
-    color: #ffffff;
-    opacity: 0.8;
-    border-radius: 5px;
-    text-align: center;
-    margin-bottom: 1rem;
-    width: 60%;
-  }
-  footer {
-    width: 100vw;
-    position: fixed;
-  }
-  .putovanja {
-    display: flex;
-    flex-direction: column;
-    padding: 2rem;
-    justify-content: center;
-    justify-content: space-around;
-  }
-  .put {
-    box-shadow: none;
-  }
-  .slike {
-    width: 280px;
-  }
-  .forma {
-    display: flex;
-    flex-direction: column;
-    color: #ffffff;
-    margin: auto;
-    padding: 2rem;
-    width: 300px;
-    background-color: rgb(32, 68, 100);
-    border-radius: 5px;
-  }
-}
+.item,h1{color:#fff}body,h3{background-color:#000}.ponuda,.put,.vasar,footer,h1,h3{text-align:center}.navigacija,ul{list-style-type:none}.item,label{padding:1rem}button,footer,input{padding:.5rem}body{margin:0 auto;box-sizing:border-box}.navigacija{display:flex;flex-direction:row;justify-content:left}.item{background-color:#2a88a5;font-size:12pt;font-weight:600;border:2px solid #fff}.item:hover{background-color:azure;color:#00f}a{color:inherit;text-decoration:none}.hero{height:60vh;width:100%;background-position:center;background-repeat:no-repeat;background-size:cover;position:relative}h3{animation-name:example;animation-duration:3s;animation-iteration-count:10;padding:.7rem;font-size:16pt}label,ul{font-size:15pt}.putovanja,.vasari{display:flex;padding:2rem;justify-content:center;justify-content:space-around}.put,.vasar{color:#f0f8ff;box-shadow:10px 10px 5px 0 rgba(255,255,255,.35)}.forma,.ponuda{display:flex;color:#fff;border-radius:5px}img{width:500px;height:300px}footer{background-color:#fff}.ponuda{flex-direction:column;justify-content:center;margin:auto auto 1rem;background-color:#4575a0;opacity:.8;padding:30px}.slike{width:350px}.naziv{display:flex;flex-direction:row;justify-content:space-between;padding:5px}.forma{flex-direction:column;margin:auto;padding:3rem;width:500px;background-color:#204464}input{border-radius:5px}button{margin-top:2rem;border-radius:5px;color:#00f}@keyframes example{from{background-color:#000;color:#fff}to{background-color:#000;color:#2b56ab}}@media screen and (max-width:990px){.ponuda,.vasar{text-align:center}.put,.vasar{box-shadow:none}.navigacija{display:flex;flex-direction:column;justify-content:center;list-style-type:none}.item{background-color:#2a88a5;padding:1rem;color:#fff;font-size:12pt;font-weight:600;border:2px solid #fff;width:60%}.putovanja,.vasari{display:flex;flex-direction:column;padding:2rem;justify-content:center;justify-content:space-around}.vasar{color:#f0f8ff}.forma,.ponuda{display:flex;color:#fff;border-radius:5px}img{width:200px;height:300px}.ponuda{flex-direction:column;justify-content:center;margin:auto auto 1rem;background-color:#4575a0;opacity:.8;width:60%}footer{width:100vw;position:fixed}.slike{width:280px}.forma{flex-direction:column;margin:auto;padding:2rem;width:300px;background-color:#204464}}
